<resources>
    <string name="app_name">Kontalk</string>
    <string name="app_description">Community-driven instant messaging network</string>
    <string name="service_name">Message Center</string>
    <string name="authenticator_name">Authentication Service</string>
    <string name="sync_service_name">Sync Contacts</string>
    <string name="download_service">Download Service</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_delete_all">Delete threads</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_offline">Go offline</string>
    <string name="menu_online">Go online</string>
    <string name="pref_network_settings">Network settings</string>
    <string name="pref_network_uri">Manual server address</string>
    <string name="pref_title_network_uri">This will override server list automatic management</string>
    <string name="number_validation_intro1">Please enter your name, select your country code and input your mobile phone number. A SMS with a verification code will be sent to you. Your phone number will be used once and then discarded.</string>
    <string name="number_validation_intro2">If you are unable to receive SMS on this device, insert a phone number you own and input the verification code you will receive via SMS.</string>
    <string name="code_validation_intro">You shall receive a SMS to the number you input briefly. Please insert the code you receive below.</string>
    <string name="code_validation_intro2">Please insert a verification code you received. Please note that a verification code can be used only once.</string>
    <string name="hint_validation_name">Your name</string>
    <string name="hint_validation_number">Your number</string>
    <string name="hint_validation_code">Verification code</string>
    <string name="warn_invalid_number">Please enter a valid phone number.</string>
    <string name="msg_validating_phone">Requesting verification code SMS&#8230;</string>
    <string name="msg_initializing">Registering to the Kontalk network&#8230;</string>
    <string name="msg_authenticated">Registered to the network!</string>
    <string name="share">Share</string>
    <string name="resend">Send again</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="delete_message">Delete message</string>
    <string name="confirm_delete_all">Delete all threads</string>
    <string name="confirm_will_delete_all">All threads will be deleted.</string>
    <string name="sending_message">Sending message&#8230;</string>
    <string name="message_text_copied">Message text copied.</string>
    <string name="call">Call</string>
    <string name="view_contact">View contact</string>
    <string name="view_conversation">View thread</string>
    <string name="delete_thread">Delete thread</string>
    <string name="confirm_delete_thread">Delete thread</string>
    <string name="confirm_will_delete_thread">The entire thread will be deleted.</string>
    <string name="new_messages">New messages</string>
    <string name="unread_messages">%d unread messages</string>
    <string name="only_one_account_supported">Only one Kontalk account is supported.</string>
    <string name="hint_enter_text">Enter your text here</string>
    <string name="hint_type_to_compose">Type to compose</string>
    <string name="hint_open_kbd_to_compose">Open keyboard to compose message</string>
    <string name="view_image">View image</string>
    <string name="title_message_options">Message options</string>
    <string name="menu_message_details">View message details</string>
    <string name="title_message_details">Message details</string>
    <string name="message_type_label">Type:\u0020</string>
    <string name="text_message">Text message</string>
    <string name="image_message">Image message</string>
    <string name="from_label">From:\u0020</string>
    <string name="to_address_label">To:\u0020</string>
    <string name="sent_label">Sent:\u0020</string>
    <string name="received_label">Received:\u0020</string>
    <string name="error_label">Error:\u0020</string>
    <string name="sending_label">Sending:\u0020</string>
    <string name="refused_label">Not accepted:\u0020</string>
    <string name="notdelivered_label">Not delivered:\u0020</string>
    <string name="delivered_label">Delivered:\u0020</string>
    <string name="encrypted_label">Encrypted:\u0020</string>
    <string name="security_label">Security:\u0020</string>
    <string name="size_label">Size:\u0020</string>
    <string name="size_unknown">(unknown)</string>
    <string name="title_file_info">File information</string>
    <string name="pref_restart_msgcenter">Restart message center</string>
    <string name="pref_title_restart_msgcenter">Use this if the message center is not working properly</string>
    <string name="pref_idle_time">Disconnect when idle</string>
    <string name="pref_title_idle_time">How long to wait before disconnecting for inactivity</string>
    <string name="pref_wakeup_time">Reconnect to server</string>
    <string name="pref_title_wakeup_time">How long to wait before reconnecting to the server after an inactivity period. Works only if push notifications are not available</string>
    <string name="pref_maintenance">Maintenance</string>
    <string name="pref_regenerate_keypair">Regenerate personal key</string>
    <string name="pref_title_regenerate_keypair">Use this in case your personal key has been compromised</string>
    <string name="contacts_list_title">Choose a contact</string>
    <string name="pref_messaging_settings">Messaging settings</string>
    <string name="pref_privacy_settings">Privacy settings</string>
    <string name="pref_encrypt">Encrypt messages</string>
    <string name="pref_title_on_encrypt">All messages will be encrypted from now on</string>
    <string name="pref_title_off_encrypt">All messages will be sent in cleartext from now on</string>
    <string name="pref_encrypt_userdata">Encrypt personal data</string>
    <string name="pref_title_on_encrypt_userdata">Status message will be visible only to users having your phone number</string>
    <string name="pref_title_off_encrypt_userdata">Status message will be visible to anyone</string>
    <string name="pref_auto_accept_subscriptions">Automatically accept invitations</string>
    <string name="pref_title_auto_accept_subscriptions">Automatically accept chat invitations by other users</string>
    <string name="pref_send_typing">Send typing notification</string>
    <string name="pref_hide_presence">Hide presence</string>
    <string name="pref_title_on_hide_presence">Users will not see you online</string>
    <string name="pref_title_off_hide_presence">Users will see you online and when you last connected</string>
    <string name="contact_not_registered">Contact seems not to be registered on Kontalk.</string>
    <string name="error_store_outbox">Unable to store message to outbox.</string>
    <string name="decrypt_message">Decrypt message</string>
    <string name="download_file">Download file</string>
    <string name="download_again">Download again</string>
    <string name="download">Download</string>
    <string name="download_cancel">Cancel download</string>
    <string name="has_draft">Draft</string>
    <string name="pref_update_server_list">Update server list</string>
    <string name="server_list_last_update">Last update: %s</string>
    <string name="pref_title_push_notifications">Use push notifications if server supports it, saves battery</string>
    <string name="pref_push_notifications">Push notifications</string>
    <string name="hint_search_full">Search messages</string>
    <string name="hint_search_quickbox">Text in your messages</string>
    <string name="title_search">Search: \"%s\"</string>
    <string name="pref_notification_settings">Notification settings</string>
    <string name="pref_enable_notifications">Notifications</string>
    <string name="pref_title_enable_notifications">Display message notifications in status bar</string>
    <string name="pref_ringtone">Select ringtone</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_title_vibrate">Also vibrate when notified</string>
    <string name="confirm_delete_message">Delete message</string>
    <string name="confirm_will_delete_message">The message will be deleted.</string>
    <string name="err_authentication_failed">Verification code refused. Authentication failed.</string>
    <string name="err_validation_failed">Phone number verification failed.</string>
    <string name="err_validation_retry_later">Too many attempts. Please wait a few minutes and try again.</string>
    <string name="msg_validation_canceled">Verification canceled. You might receive a SMS anyway.</string>
    <string name="err_validation_error">An error occurred during verification. Please try again later.</string>
    <string name="err_validation_network_error">Unable to connect to server. Please try again later.</string>
    <string name="err_validation_server_not_supported">Selected server does not support registration. Please configure another one in Settings screen.</string>
    <string name="text_encrypted">(encrypted)</string>
    <string name="peer_unknown">(unknown)</string>
    <string name="msg_draft_saved">Message saved as draft.</string>
    <string name="send_mime_not_supported">File type not supported.</string>
    <string name="button_validate">Request verification code</string>
    <string name="button_validation_code">I already have a verification code</string>
    <string name="button_validation_register">Verify</string>
    <string name="notify_ticker_download_completed">Download completed</string>
    <string name="notify_title_download_completed">Download completed</string>
    <string name="notify_text_download_completed">Attachment download completed</string>
    <string name="notify_ticker_download_error">Download failed</string>
    <string name="notify_title_download_error">Download error</string>
    <string name="notify_text_download_error">Attachment download failed</string>
    <string name="notify_ticker_upload_error">Upload failed</string>
    <string name="notify_title_upload_error">Upload error</string>
    <string name="notify_text_upload_error">Attachment upload failed</string>
    <string name="title_invalid_number">Invalid number</string>
    <string name="err_store_message_failed">Unable to store message to outbox.</string>
    <string name="msg_invalid_number">Please insert a valid phone number.</string>
    <string name="msg_invalid_cc">Please insert a valid country code.</string>
    <string name="title_invalid_code">Invalid code</string>
    <string name="msg_invalid_code">Please insert a valid code.</string>
    <string name="title_no_name">Your name</string>
    <string name="msg_no_name">Please insert a name.</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_invite">Invite users</string>
    <string name="title_error">Error</string>
    <string name="msg_do_refresh">Use the refresh button to update contact list.</string>
    <string name="msg_sync_progress">Refreshing contacts list&#8230;</string>
    <string name="err_sync_failed">Unable to refresh contacts list. Please retry later.</string>
    <string name="err_sync_nonetwork">Network not available. Please retry later.</string>
    <string name="text_invite_message">Hey! Check out Kontalk on Google Play Store, a free messaging app! https://play.google.com/store/apps/details?id=org.kontalk</string>
    <string name="menu_attachment">Attach</string>
    <string name="menu_block_user">Block</string>
    <string name="menu_unblock_user">Unblock</string>
</resources>