<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="pref_key_network_settings" android:title="@string/pref_network_settings">
        <Preference
            android:key="pref_update_server_list"
            android:title="@string/pref_update_server_list"/>
        <EditTextPreference
            android:dialogTitle="@string/pref_network_uri"
            android:positiveButtonText="@android:string/ok"
            android:negativeButtonText="@android:string/cancel"
            android:title="@string/pref_network_uri"
            android:summary="@string/pref_title_network_uri"
            android:key="pref_network_uri"
            android:singleLine="true" android:inputType="textUri"/>
        <CheckBoxPreference
            android:key="pref_push_notifications"
            android:summary="@string/pref_title_push_notifications"
            android:title="@string/pref_push_notifications"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>
