<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_network_settings" android:key="pref_network_settings">
		<EditTextPreference
		    android:dialogTitle="@string/pref_network_uri"
		    android:positiveButtonText="@android:string/ok"
		    android:negativeButtonText="@android:string/cancel"
		    android:title="@string/pref_network_uri"
		    android:key="pref_network_uri"
		    android:singleLine="true" android:inputType="textUri"/>
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_maintainance" android:title="@string/pref_maintainance">
        <Preference
            android:key="pref_restart_msgcenter"
            android:summary="@string/pref_title_restart_msgcenter"
            android:title="@string/pref_restart_msgcenter"/>
    </PreferenceCategory>
</PreferenceScreen>
