<?xml version="1.0" encoding="utf-8"?>
<!--
     Kontalk Android client
     Copyright (C) 2014 Kontalk Devteam <devteam@kontalk.org>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="18dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingBottom="10dip"
            android:id="@+id/code_validation_intro"
            android:text="@string/code_validation_intro" />

        <EditText
            android:id="@+id/validation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:hint="@string/hint_validation_code"
            android:inputType="phone" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:onClick="validateCode"
            android:text="@string/button_validation_register" />
    </LinearLayout>

</ScrollView>