<?xml version="1.0" encoding="utf-8"?>
<!-- Kontalk Android client
     Copyright (C) 2011 Kontalk Devteam <devteam@kontalk.org>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/titlebar_bg"
    android:orientation="horizontal">

    <TextView
        android:id="@android:id/title"
        style="@style/titleTextStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.0"
        android:gravity="center_vertical"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/separator_search"
        android:background="@drawable/divider"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:visibility="gone"/>

    <ImageButton
        android:contentDescription="@string/menu_search"
        android:background="@android:drawable/list_selector_background"
        android:src="@drawable/ic_title_search"
        android:scaleType="centerInside"
        android:layout_width="58dp"
        android:layout_height="match_parent"
        android:id="@+id/title_search"
        android:visibility="gone"
        android:onClick="titleSearch"/>

    <ImageView
        android:background="@drawable/divider"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"/>

    <ImageButton
        android:contentDescription="@string/menu_compose"
        android:background="@android:drawable/list_selector_background"
        android:src="@drawable/ic_title_compose"
        android:scaleType="centerInside"
        android:layout_width="58dp"
        android:layout_height="match_parent"
        android:id="@+id/title_compose"
        android:onClick="titleComposeMessage"/>

</LinearLayout>
